--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,7 @@
   <h3> Heading </h3>
   <h3> Heading </h3>
   <h3> Heading </h3>
+  <h3> Heading </h3>
 <p>HTML links are defined with the a tag:</p>
 
 <a href="https://www.w3schools.com">This is a link</a>
