--- a/index4.html
+++ b/index4.html
@@ -7,6 +7,9 @@
 <h4>This is heading 4</h4>
 <h5>This is heading 5</h5>
 <h6>This is heading 6</h6>
+  <h6>This is heading 6</h6>
+  <h6>This is heading 6</h6>
+  <h6>This is heading 6</h6>
   <h7> heading 111111111 </h7>
 
 </body>
